# network-scanner

./: .dockerignore  .gitignore  CONTAINER_REGISTRY.md  Dockerfile.production  README.md  WARP.md  docker-compose.ghcr.yml  docker-compose.production.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  run_tests.py  setup.py  start-services.sh
.github/workflows/: ci.yml  docker-publish.yml
backend/: Dockerfile  requirements.txt  requirements_new.txt
backend/app/: config.py  database.py  main.py
backend/app/auth/: __init__.py  dependencies.py  security.py
backend/app/models/: __init__.py  artifact.py  host.py  port.py  scan.py  schedule.py  settings.py  traceroute.py  user.py
backend/app/scanner/: network_detection.py  nmap_runner.py  orchestrator.py  parser.py  report_gen.py  stuck_scan_monitor.py
backend/app/scheduler/: __init__.py  scheduler.py
backend/app/schemas/: __init__.py  auth.py  scan.py  schedule.py  settings.py  stats.py  user.py
docs/: conf.py
frontend/: pubspec.yaml
frontend/lib/: main.dart
frontend/lib/models/: scan.dart  schedule.dart  settings.dart
frontend/lib/screens/: change_password_screen.dart  create_scan_dialog.dart  create_schedule_dialog.dart  hosts_list_screen.dart  login_screen.dart  scans_screen.dart  (+5 more)
frontend/test/: widget_test.dart
mcp_server/: README.md  requirements.txt  server.py  server_http.py  setup_warp.sh  test_mcp_server.py
tests/: README.md  __init__.py  conftest.py  test_api.py  test_authentication.py  test_mcp_and_monitoring.py  test_models.py  test_scan_orchestration.py  test_scheduler.py
(+2 files in other folders)
